mengubah sedikit isi paragraf

--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
             <div class="card">
               <img src="img/Evermos.png" class="card-img-top" alt="Project5">
               <div class="card-body">
-                <h5 class="card-title">Download Aplikasi Evermos</h5>
+                <h5 class="card-title">Daftar Free Aplikasi Evermos</h5>
                 <p class="card-text">Aplikasi Penghasil <br> Uang Dari Rumah </p>
                 <a href="https://evermos.com/registration?referralId=shop.online.sm.f37" class="btn btn-primary">Klik untuk lihat lebih detail</a>
             </div>
@@ -225,7 +225,7 @@
           <div class="card">
             <img src="img/Xp2.jpg" class="card-img-top" alt="xp">
             <div class="card-body">
-              <p class="card-text fw-bold">Pengalaman Kerja di Astra Selama 15 Tahun Di Bidang Metallugi</p>
+              <p class="card-text fw-bold">Pengalaman Kerja di Astra Selama 15 Tahun Di Bidang Metallugi dan Head treatment</p>
             </div>
           </div>
          </div>
