Mengubah isi paragraf about

--- a/index.html
+++ b/index.html
@@ -100,10 +100,10 @@
         </div>
         <div class="row justify-content-center fs-5 text-center">
           <div class="col-md-6">
-            <p class="fw-bold">Pertumbuhan Industri otomotif yang signifikan, akan menyebabkan kebutuhan akan baja perkakas sebagai bahan baku pembuatan mould dan dies juga akan meningkat secara signifikan. Oleh karena itu Project Cv.Semangat Mandiri hadir untuk memenuhi kebutuhan Ferous Non Ferous Antara lain Baja perkakas,Stainless.Almunium,Form Nilon etc.Serta merta Pembuatan part,Machinning,Heat Treatment.Kualitas unggul baja perkakas yang diproduksi oleh Daido Steel telah diakui di seluruh dunia dan telah terbukti digunakan oleh berbagai produsen produk otomotif dan non-otomotif.</p>
+            <p class="fw-bold">Project OFFLINE Cv.Semangat Mandiri dalam bidang Industri Manufakturing dan Otomotif, bertujuan memenuhi kebutuhan consumen/pelanggan dalam kebutuhan baja perkakas sebagai bahan baku pembuatan mould dan dies juga Part untuk dijadikan Produk Industri dan element Part lainnya.Oleh karena itu Project Cv.Semangat Mandiri hadir untuk memenuhi kebutuhan Consumen dalam hal produk Ferous Non Ferous Antara lain,Baja Carbon steel ,Stainless.Almunium,Form Nilon Etc,serta merta pembuatan partnya,Machinning,proses Heat Treatmentnya.Adapun Mitra Cv.Semangat Mandiri adalah Daido Steel,Assab,dan Sanyo steel etc,telah bekerja sama dalam bidang mendistribusikan Bahan Baku Carbon Steel,Stainless.Almunium,Pom Nylon dan jasa heat treamentnya untuk membantu consumen/pelanggan agar dapat pelayanan yang lebih baik.</p>
           </div>
           <div class="col-md-6">
-            <p class="fw-bold">Project Cv.Semangat Mandiri Menyelenggarakan program pengabdian masyarakat di bidang bisnis digital dan Mengembangkan jejaring nasional dan internasional dalam pengembangan bisnis digital.TujuanTujuan dari Project Bisnis Digital Cv.Semangat Mandiri adalah mampu menyelenggrakan kegiatan UMKM yang sangat membantu dalam meningkatkan ekonomi masyarakat</p>
+            <p class="fw-bold">Project ONLINE Cv.Semangat Mandiri juga Menerima jasa pembuatan Website pribadi/perusahaan guna persiapan keperluan meningkatkan brand dalam pemasarannya dan lain-lain.Dalam project bidang bisnis digital Cv.Semangat Mandiri berupaya untuk Mengembangkan jejaring nasional dan memberikan edukasi dalam akademi bisnis digitalnya.Tujuan dari Project Bisnis Digital Cv.Semangat Mandiri adalah menyelenggarakan Seminar,Edukasi,Pelatihan Bisnis Digital agar dapat bermanfaat bagi kegiatan Home Indutri dan UMKM untuk memiliki usaha yang mandiri dan dapat meningkatkan ekonomi masyarakat</p>
           </div>
         </div>
       </div>
@@ -173,7 +173,7 @@
               <img src="img/ABDI.png" class="card-img-top" alt="Project4">
               <div class="card-body">
                 <h5 class="card-title">Digital Marketing</h5>
-                <p class="card-text">Daftar Bisnis Digital Marketing ABDI Untuk Pengahasilan Dari Rumah</p>
+                <p class="card-text">Daftar Bisnis Digital Marketing ABDI Untuk Pemula agar dapat Pengahasilan Dari Rumah</p>
                 <a href="http://www.akademibisnisdigital.com/#/freevideo?ref=Sungc582&funnel=FreeVideo1" class="btn btn-primary">Klik untuk lihat lebih detail</a> 
               </div>
             </div>
@@ -217,7 +217,7 @@
             <div class="card">
               <img src="img/Xp1.jpg" class="card-img-top" alt="xp">
               <div class="card-body">
-                <p class="card-text fw-bold">Pengalaman Cara Beriklan Di Facebook Ads dan Google Ads</p>
+                <p class="card-text fw-bold">Pengalaman Cara Beriklan Di Facebook Ads dan Google Ads dan Jasa Pembuatan Website</p>
               </div>
             </div>
           </div>
@@ -225,7 +225,7 @@
           <div class="card">
             <img src="img/Xp2.jpg" class="card-img-top" alt="xp">
             <div class="card-body">
-              <p class="card-text fw-bold">Pengalaman Kerja di Astra Selama 15 Tahun Di Bidang Metallugi dan Head treatment</p>
+              <p class="card-text fw-bold">Pengalaman Kerja di Astra Internasional Selama 15 Tahun Di Metallugi dan Head treatment</p>
             </div>
           </div>
          </div>
