--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <title>Web CV Semangat Mandiri</title>
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+    <title>Web CV.Semangat Mandiri</title>
     <style>
       section {
         padding-top: 4.4rem;
@@ -85,7 +86,7 @@
     <section class="jumbotron text-center">
       <img src="img/LOGO SM.jpg" alt="logo" width="250" class="rounded-circle img-thumbnail">
       <h1 class="display-4 text-white fw-bold">CV Semangat Mandiri</h1>
-      <p class="lead text-white fw-bold">Supplier Ferros Non Ferros | General Tools | Machining Part | Digital Marketing | Marketplace Shopee</p>
+      <p class="lead text-white fw-bold"></p>
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="white" fill-opacity="1" d="M0,96L40,128C80,160,160,224,240,256C320,288,400,288,480,288C560,288,640,288,720,256C800,224,880,160,960,122.7C1040,85,1120,75,1200,96C1280,117,1360,171,1400,197.3L1440,224L1440,320L1400,320C1360,320,1280,320,1200,320C1120,320,1040,320,960,320C880,320,800,320,720,320C640,320,560,320,480,320C400,320,320,320,240,320C160,320,80,320,40,320L0,320Z"></path></svg>
     </section>
     <!-- Akhir Tron -->
@@ -100,10 +101,10 @@
         </div>
         <div class="row justify-content-center fs-5 text-center">
           <div class="col-md-6">
-            <p class="fw-bold">Project OFFLINE Cv.Semangat Mandiri dalam bidang Industri Manufakturing dan Otomotif, bertujuan memenuhi kebutuhan consumen/pelanggan dalam kebutuhan baja perkakas sebagai bahan baku pembuatan mould dan dies juga Part untuk dijadikan Produk Industri dan element Part lainnya.Oleh karena itu Project Cv.Semangat Mandiri hadir untuk memenuhi kebutuhan Consumen dalam hal produk Ferous Non Ferous Antara lain,Baja Carbon steel ,Stainless.Almunium,Form Nilon Etc,serta merta pembuatan partnya,Machinning,proses Heat Treatmentnya.Adapun Mitra Cv.Semangat Mandiri adalah Daido Steel,Assab,dan Sanyo steel etc,telah bekerja sama dalam bidang mendistribusikan Bahan Baku Carbon Steel,Stainless.Almunium,Pom Nylon dan jasa heat treamentnya untuk membantu consumen/pelanggan agar dapat pelayanan yang lebih baik.</p>
+            <p class="fw-bold" data-aos="fade-left"data-aos-duration="1000" data-aos-delay="200">Project OFFLINE <span class="text-danger">Cv.Semangat Mandiri</span> dalam bidang Industri Manufakturing dan Otomotif, bertujuan memenuhi kebutuhan consumen/pelanggan dalam kebutuhan baja perkakas sebagai bahan baku pembuatan mould dan dies juga Part untuk dijadikan Produk Industri dan element Part lainnya.Oleh karena itu Project <span class="text-danger">Cv.Semangat Mandiri</span> hadir untuk memenuhi kebutuhan Consumen dalam hal produk Ferous Non Ferous Antara lain,Baja Carbon steel ,Stainless.Almunium,Form Nilon Etc,serta merta pembuatan partnya,Machinning,proses Heat Treatmentnya.Adapun Mitra <span class="text-danger">Cv.Semangat Mandiri</span> adalah Daido Steel,Assab,dan Sanyo steel etc,telah bekerja sama dalam bidang mendistribusikan Bahan Baku Carbon Steel,Stainless.Almunium,Pom Nylon dan jasa heat treamentnya untuk membantu consumen/pelanggan agar dapat pelayanan yang lebih baik.</p>
           </div>
           <div class="col-md-6">
-            <p class="fw-bold">Project ONLINE Cv.Semangat Mandiri juga Menerima jasa pembuatan Website pribadi/perusahaan guna persiapan keperluan meningkatkan brand dalam pemasarannya dan lain-lain.Dalam project bidang bisnis digital Cv.Semangat Mandiri berupaya untuk Mengembangkan jejaring nasional dan memberikan edukasi dalam akademi bisnis digitalnya.Tujuan dari Project Bisnis Digital Cv.Semangat Mandiri adalah menyelenggarakan Seminar,Edukasi,Pelatihan Bisnis Digital agar dapat bermanfaat bagi kegiatan Home Indutri dan UMKM untuk memiliki usaha yang mandiri dan dapat meningkatkan ekonomi masyarakat</p>
+            <p class="fw-bold" data-aos="fade-right"data-aos-duration="1000" data-aos-delay="200">Project ONLINE <span class="text-danger">Cv.Semangat Mandiri</span> juga Menerima jasa pembuatan Website pribadi/perusahaan guna persiapan keperluan meningkatkan brand dalam pemasarannya dan lain-lain.Dalam project bidang bisnis digital <span class="text-danger">Cv.Semangat Mandiri</span> berupaya untuk Mengembangkan jejaring nasional dan memberikan edukasi dalam akademi bisnis digitalnya.Tujuan dari Project Bisnis Digital <span class="text-danger">Cv.Semangat Mandiri</span> adalah menyelenggarakan Seminar,Edukasi,Pelatihan Bisnis Digital agar dapat bermanfaat bagi kegiatan Home Indutri dan UMKM untuk memiliki usaha yang mandiri dan dapat meningkatkan ekonomi masyarakat</p>
           </div>
         </div>
       </div>
@@ -121,7 +122,7 @@
         </div>
         <div class="row justify-content-center text-center">
           <div class="col-md-4 mb-3">
-            <div class="card">
+            <div class="card" data-aos="flip-right" data-aos-duration="500" data-aos-delay="400" data-aos-offset="500">
               <img src="img/2Ferros.jpg" class="card-img-top" alt="Project1">
               <div class="card-body">
                 <h5 class="card-title">Ferros dan Non ferros</h5>
@@ -131,7 +132,7 @@
             </div>
           </div>
             <div class="col-md-4 mb-3">
-            <div class="card">
+            <div class="card" data-aos="flip-right" data-aos-duration="1000" data-aos-offset="700">
               <img src="img/Toolz.jpg" class="card-img-top" alt="Project2">
               <div class="card-body">
                 <h5 class="card-title">General Tools</h5>
@@ -141,18 +142,18 @@
             </div>
           </div>
             <div class="col-md-4 mb-3">
-            <div class="card">
+            <div class="card" data-aos="flip-left" data-aos-duration="1000" data-aos-delay="100" data-aos-offset="700">
               <img src="img/Worksop7.jpg" class="card-img-top" alt="Project3">
               <div class="card-body">
                 <h5 class="card-title">Workshop</h5>
                 <p class="card-text">Workshop Mesin CNC Bubut, CNC Miling, Manual Bubut, Grinding Mesin, Miling Manual.</p>
-                <a href="https://www.youtube.com/watch?v=DZxg5pprGc4" class="btn btn-primary">Klik untuk lihat lebih detail</a>
+                <a href="https://www.youtube.com/watch?v=MUWRcqlMFZs" class="btn btn-primary">Klik untuk lihat lebih detail</a>
               </div>
             </div>
           </div>
           
               <div class="col-md-4 mt-3">
-            <div class="card">
+            <div class="card" data-aos="flip-up" data-aos-duration="500" data-aos-delay="200" data-aos-offset="500">
               <img src="img/Insize.png" class="card-img-top" alt="Project5">
               <div class="card-body">
                 <h5 class="card-title">Insize</h5>
@@ -169,7 +170,7 @@
           </div>
 
             <div class="col-md-4 mt-3">
-            <div class="card">
+            <div class="card" data-aos="flip-down" data-aos-duration="500" data-aos-delay="300" data-aos-offset="500">
               <img src="img/ABDI.png" class="card-img-top" alt="Project4">
               <div class="card-body">
                 <h5 class="card-title">Digital Marketing</h5>
@@ -179,7 +180,7 @@
             </div>
           </div>
             <div class="col-md-4 mt-3">
-            <div class="card">
+            <div class="card" data-aos="flip-down" data-aos-duration="500" data-aos-delay="400" data-aos-offset="500">
               <img src="img/Sopi.jpg" class="card-img-top" alt="Project5">
               <div class="card-body">
                 <h5 class="card-title">MarketPlace Shopee</h5>
@@ -189,12 +190,12 @@
             </div>
           </div>
            <div class="col-md-4 mt-3">
-            <div class="card">
+            <div class="card" data-aos="flip-right" data-aos-duration="500" data-aos-delay="400" data-aos-offset="500">
               <img src="img/Evermos.png" class="card-img-top" alt="Project5">
               <div class="card-body">
-                <h5 class="card-title">Daftar Free Aplikasi Evermos</h5>
-                <p class="card-text">Aplikasi Penghasil <br> Uang Dari Rumah </p>
-                <a href="https://evermos.com/registration?referralId=shop.online.sm.f37" class="btn btn-primary">Klik untuk lihat lebih detail</a>
+                <h5 class="card-title">E-commerce Evermos</h5>
+                <p class="card-text">Belanja Di Evermos <br> Toko Kami </p>
+                <a href="https://berikhtiar.com/shop.online.sm.f37" class="btn btn-primary">Klik untuk lihat lebih detail</a>
             </div>
           </div>
         </div>
@@ -214,7 +215,7 @@
           </div>
         <div class="row justify-content-center text-center">
           <div class="col-md-6">
-            <div class="card">
+            <div class="card" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="500">
               <img src="img/Xp1.jpg" class="card-img-top" alt="xp">
               <div class="card-body">
                 <p class="card-text fw-bold">Pengalaman Cara Beriklan Di Facebook Ads dan Google Ads dan Jasa Pembuatan Website</p>
@@ -222,7 +223,7 @@
             </div>
           </div>
           <div class="col-md-6">
-          <div class="card">
+          <div class="card" data-aos="fade-down" data-aos-duration="1000" data-aos-delay="500">
             <img src="img/Xp2.jpg" class="card-img-top" alt="xp">
             <div class="card-body">
               <p class="card-text fw-bold">Pengalaman Kerja di Astra Internasional Selama 15 Tahun Di Metallugi dan Head treatment</p>
@@ -236,7 +237,8 @@
     <!-- akhir exe -->
 
     <!-- Contact -->
-     <section id="contact">
+     <section id="contact" data-aos="fade-up"
+     data-aos-anchor-placement="center-bottom">
      <div class="container">
        <div class="row text-center mb-3">
          <div class="col">
@@ -303,16 +305,31 @@
     <!-- akhir futer -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 
+  <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+  <script>
+    AOS.init();
+  </script>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.8.0/gsap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.8.0/TextPlugin.min.js"></script>
+    <script>
+      gsap.registerPlugin(TextPlugin);
+      gsap.to(`.lead`, {duration: 7, delay : 1.3, text :`Supplier Ferros Non Ferros | General Tools | Machining Part | Digital Marketing | Marketplace Shopee`});
+      gsap.from(`.jumbotron img`, {duration: 2, x :-300, opacity :0 ,ease : `bounce` });
+      gsap.from(`.navbar`, {duration: 3, y : `-100%`, opacity: 0, ease : `elastic` });
+      gsap.from(`.display-4`, {duration: 1, y : 100, opacity: 0, delay : 0.7, ease : `elastic` });
+    </script>
+
+
+
+
+
     <script>
   const scriptURL = 'https://script.google.com/macros/s/AKfycbzo_5_jE30rrryJXCig6Uxl0AonY1EBsRMitrYs3eQt9_k0XVldy6UpVRnA8dbHF_fG/exec';
   const form = document.forms['kono-contact-form']
   const btnKirim = document.querySelector('.btn-kirim');
   const btnLoading = document.querySelector('.btn-loading') 
   const alert = document.querySelector('.alert'); 
-
-
-
-
   form.addEventListener('submit', e => {
     e.preventDefault()
     // pas ngeklig
