--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
         </div>
         <div class="row justify-content-center text-center">
           <div class="col-md-4 mb-3">
-            <div class="card" data-aos="flip-right" data-aos-duration="500" data-aos-delay="400" data-aos-offset="500">
+            <div class="card" data-aos="flip-right" data-aos-duration="500" data-aos-delay="400" >
               <img src="img/2Ferros.jpg" class="card-img-top" alt="Project1">
               <div class="card-body">
                 <h5 class="card-title">Ferros dan Non ferros</h5>
@@ -132,7 +132,7 @@
             </div>
           </div>
             <div class="col-md-4 mb-3">
-            <div class="card" data-aos="flip-right" data-aos-duration="1000" data-aos-offset="700">
+            <div class="card" data-aos="flip-right" data-aos-duration="1000" >
               <img src="img/Toolz.jpg" class="card-img-top" alt="Project2">
               <div class="card-body">
                 <h5 class="card-title">General Tools</h5>
@@ -142,7 +142,7 @@
             </div>
           </div>
             <div class="col-md-4 mb-3">
-            <div class="card" data-aos="flip-left" data-aos-duration="1000" data-aos-delay="100" data-aos-offset="700">
+            <div class="card" data-aos="flip-left" data-aos-duration="1000" data-aos-delay="100" >
               <img src="img/Worksop7.jpg" class="card-img-top" alt="Project3">
               <div class="card-body">
                 <h5 class="card-title">Workshop</h5>
@@ -153,7 +153,7 @@
           </div>
           
               <div class="col-md-4 mt-3">
-            <div class="card" data-aos="flip-up" data-aos-duration="500" data-aos-delay="200" data-aos-offset="500">
+            <div class="card" data-aos="flip-up" data-aos-duration="500" data-aos-delay="200" >
               <img src="img/Insize.png" class="card-img-top" alt="Project5">
               <div class="card-body">
                 <h5 class="card-title">Insize</h5>
@@ -170,7 +170,7 @@
           </div>
 
             <div class="col-md-4 mt-3">
-            <div class="card" data-aos="flip-down" data-aos-duration="500" data-aos-delay="300" data-aos-offset="500">
+            <div class="card" data-aos="flip-down" data-aos-duration="500" data-aos-delay="300" >
               <img src="img/ABDI.png" class="card-img-top" alt="Project4">
               <div class="card-body">
                 <h5 class="card-title">Digital Marketing</h5>
@@ -180,7 +180,7 @@
             </div>
           </div>
             <div class="col-md-4 mt-3">
-            <div class="card" data-aos="flip-down" data-aos-duration="500" data-aos-delay="400" data-aos-offset="500">
+            <div class="card" data-aos="flip-down" data-aos-duration="500" data-aos-delay="400" >
               <img src="img/Sopi.jpg" class="card-img-top" alt="Project5">
               <div class="card-body">
                 <h5 class="card-title">MarketPlace Shopee</h5>
@@ -190,7 +190,7 @@
             </div>
           </div>
            <div class="col-md-4 mt-3">
-            <div class="card" data-aos="flip-right" data-aos-duration="500" data-aos-delay="400" data-aos-offset="500">
+            <div class="card" data-aos="flip-right" data-aos-duration="500" data-aos-delay="400" >
               <img src="img/Evermos.png" class="card-img-top" alt="Project5">
               <div class="card-body">
                 <h5 class="card-title">E-commerce Evermos</h5>
