--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
         background-color: #0099ff;
       }
      
+      
+
      footer {
       background-color: black;
      }
@@ -143,7 +145,7 @@
           </div>
             <div class="col-md-4 mb-3">
             <div class="card" data-aos="flip-left" data-aos-duration="1000" data-aos-delay="100" >
-              <img src="img/Worksop7.jpg" class="card-img-top" alt="Project3">
+              <img src="img/Bubud.jpg" class="card-img-top" alt="Project3">
               <div class="card-body">
                 <h5 class="card-title">Workshop</h5>
                 <p class="card-text">Workshop Mesin CNC Bubut, CNC Miling, Manual Bubut, Grinding Mesin, Miling Manual.</p>
@@ -163,6 +165,29 @@
             </div>
           </div>
 
+               <div class="col-md-4 mt-3">
+            <div class="card" data-aos="flip-up" data-aos-duration="500" data-aos-delay="200" >
+              <img src="img/ANCHOR.png" class="card-img-top" alt="Project5">
+              <div class="card-body">
+                <h5 class="card-title">Anchor</h5>
+                <p class="card-text">Penyedia Grinding Wheel Surface, <br> dll </p>
+                <a href="img/2G.jpg" class="btn btn-primary">Klik untuk lihat lebih detail</a>
+              </div>
+            </div>
+          </div>
+
+
+               <div class="col-md-4 mt-3">
+            <div class="card" data-aos="flip-up" data-aos-duration="500" data-aos-delay="200" >
+              <img src="img/OSG.jpg" class="card-img-top" alt="Project5">
+              <div class="card-body">
+                <h5 class="card-title">Produk OSG</h5>
+                <p class="card-text">Penyedia Matabor, Enmil, Taper Shank Drill Somta <br> dll</p>
+                <a href="http://www.osg.co.jp/en/" class="btn btn-primary">Klik untuk lihat lebih detail</a>
+              </div>
+            </div>
+          </div>
+
             <div class="row text-center mb-2">
             <div class="col">
               <h2 class="text-white fw-bold mt-5">PROJECTS ONLINE</h2>
@@ -171,7 +196,7 @@
 
             <div class="col-md-4 mt-3">
             <div class="card" data-aos="flip-down" data-aos-duration="500" data-aos-delay="300" >
-              <img src="img/ABDI.png" class="card-img-top" alt="Project4">
+              <img src="img/ABDi.png" class="card-img-top" alt="Project4">
               <div class="card-body">
                 <h5 class="card-title">Digital Marketing</h5>
                 <p class="card-text">Daftar Bisnis Digital Marketing ABDI Untuk Pemula agar dapat Pengahasilan Dari Rumah</p>
@@ -181,21 +206,21 @@
           </div>
             <div class="col-md-4 mt-3">
             <div class="card" data-aos="flip-down" data-aos-duration="500" data-aos-delay="400" >
-              <img src="img/Sopi.jpg" class="card-img-top" alt="Project5">
+              <img src="img/Senzo.png" class="card-img-top" alt="Project5">
               <div class="card-body">
-                <h5 class="card-title">MarketPlace Shopee</h5>
-                <p class="card-text">Penyedia Aksesoris Handphone, Headset, Powerbank, Charger, Kabeldata, Casing dan Handphone.</p>
-                <a href="https://shopee.co.id/semangatmandiri" class="btn btn-primary">Klik untuk lihat lebih detail</a>
+                <h5 class="card-title">Mau Jadi Reseller Essenzo??</h5>
+                <p class="card-text">Klik link <br> dibawah ini</p>
+                <a href="https://semangatmandiri.github.io/SemangatMandiri.github.io-RESELLER/" class="btn btn-primary">Klik untuk lihat lebih detail</a>
               </div>
             </div>
           </div>
            <div class="col-md-4 mt-3">
             <div class="card" data-aos="flip-right" data-aos-duration="500" data-aos-delay="400" >
-              <img src="img/Evermos.png" class="card-img-top" alt="Project5">
+              <img src="img/Jasa.jpg" class="card-img-top" alt="Project5">
               <div class="card-body">
-                <h5 class="card-title">E-commerce Evermos</h5>
-                <p class="card-text">Belanja Di Evermos <br> Toko Kami </p>
-                <a href="https://berikhtiar.com/shop.online.sm.f37" class="btn btn-primary">Klik untuk lihat lebih detail</a>
+                <h5 class="card-title">Jasa Pembuatan Website</h5>
+                <p class="card-text">Jasa Pembuatan <br> Website Profesional</p>
+                <a href="https://www.fiverr.com/share/VN7zAd" class="btn btn-primary">Klik untuk lihat lebih detail</a>
             </div>
           </div>
         </div>
@@ -210,7 +235,7 @@
       <div class="container">
         <div class="row text-center mb-3">
           <div class="col">
-                <h2 class="fw-bold">EXPERIENCE</h2>
+                <h2 class="fw-bold">PENGALAMAN</h2>
             </div>
           </div>
         <div class="row justify-content-center text-center">
@@ -242,7 +267,7 @@
      <div class="container">
        <div class="row text-center mb-3">
          <div class="col">
-           <h2 class="text-white fw-bold">CONTACT</h2>
+           <h2 class="text-white fw-bold">Form Customer</h2>
          </div>
        </div>
 
@@ -250,9 +275,10 @@
         <div class="col-md-4">
              <div class="card text-white bg-dark mb-3 text-center">
               <div class="card-body">
-                <h5 class="card-title">Contact Me <i class="bi bi-envelope-fill"></i></h5>
+                <h5 class="card-title"><a class="text-decoration-none text-white" href="https://t.me/semangatmandiri">Klik Gabung Telegram <i class="bi bi-telegram"></i></h5>
               </div>
             </div>
+
             <ul class="list-group text-center">
               <li class="list-group-item"><h1>Location</h1></li>
               <li class="list-group-item">Jl Raya Merdeka No 140 RT05/04 Kel Pabuaran Kec Karawaci, Tangerang Banten Kode pos: 11514</li>
@@ -268,19 +294,15 @@
           <form name="kono-contact-form">
             <div class="mb-3">
               <label for="nama" class="form-label">Nama</label>
-              <input type="nama" class="form-control" id="nama" aria-describedby="nama" name="nama">
+              <input type="nama" class="form-control" id="nama" aria-describedby="nama" name="nama" required>
             </div>
             <div class="mb-3">
               <label for="email" class="form-label">Email</label>
-              <input type="email" class="form-control" id="email" aria-describedby="email" name="email">
-            </div>
-            <div class="mb-3">
-              <label for="phone" class="form-label">No HP</label>
-              <input type="phone" class="form-control" id="phone" aria-describedby="phone" name="phone">
+              <input type="email" class="form-control" id="email" aria-describedby="email" name="email" required>
             </div>
              <div class="mb-3">
-              <label for="pesan" class="form-label">Pesan</label>
-              <textarea class="form-control" id="pesan" rows="3" name="pesan"></textarea>
+              <label for="pesan" class="form-label">Konsultasi</label>
+              <textarea class="form-control" id="pesan" rows="3" name="pesan" required></textarea>
             </div>
             <button type="submit" class="btn btn-success btn-kirim">Kirim</button>
             <button class="btn btn-success btn-loading d-none" type="button" disabled>
