--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
 
             <div class="col-md-4 mt-3">
             <div class="card" data-aos="flip-down" data-aos-duration="500" data-aos-delay="300" >
-              <img src="img/ABDi.png" class="card-img-top" alt="Project4">
+              <img src="img/ABDI.png" class="card-img-top" alt="Project4">
               <div class="card-body">
                 <h5 class="card-title">Digital Marketing</h5>
                 <p class="card-text">Daftar Bisnis Digital Marketing ABDI Untuk Pemula agar dapat Pengahasilan Dari Rumah</p>
